Changes in version 0.0.7 - UNRELEASED:

Changes in version 0.0.6 - 2017-04-19:
 * Add back the old release MAR signing key.

Changes in version 0.0.5 - 2017-04-13:
 * Bug 21764: Use bubblewrap's `--die-with-parent` when supported.
 * Fix e10s Web Content crash on systems with grsec kernels.
 * Add `prlimit64` to the firefox system call whitelist.

Changes in version 0.0.4 - 2017-04-12:
 * Bug 21928: Force a reinstall if an existing hardened bundle is present.
 * Bug 21929: Remove hardened/ASAN related code.
 * Bug 21927: Remove the ability to install/update the hardened bundle.
 * Bug 21244: Update the MAR signing key for 7.0.
 * Bug 21536: Remove asn's scramblesuit bridge from Tor Browser.
 * Fix compilation with Go 1.8.
 * Use Config.Clone() to clone TLS configs when available.

Changes in version 0.0.3 - 2017-01-18:
 * Bug 21057: Change the metadata URL(s) for the stable bundle.
 * Bug 21184: Do a better job of killing/cleaning up bwrap children.
 * Bug 21093: Go back to using gosecco for seccomp rule compilation.
 * Bug 20940: Deprecate x86 support.
 * Bug 20778: Check for updates in the background.
 * Bug 20851: If the incremental update fails, fall back to the complete
   update.
 * Bug 21055: Fall back gracefully if the Adwaita theme is not present.
 * Bug 20791: Fetch install/update metadata using onions.
 * Bug 20979: runtime/cgo: pthread_create failed: Resource temporarily
   unavailable.
 * Bug 20993: Handle the lock file better.
 * Bug 20970: Firefox crashes if the security slider is left at the default
   on certain pages.
 * Bug 20973: Silence Gdk warnings on systems with integrated png loader.
 * Bug 20806: Try even harder to exclude gstreamer.
 * Enforce the patch size against that listed in the update XML metadata.
 * Minor tweaks to the "something in progress" dialog box.
 * Disable the firefox safe mode prompt, because it is nonsensical when
   applied to Tor Browser.
 * Add a `-h` command line flag that prints usage.